yaml/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: chores-ingress
spec:
  rules:
    - host: chores-app.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: chores-app
                port:
                  number: 2345
